[project]
name = "xx-bloomfilter"
version = "0.10.0"
authors = ["Drazen Urch <drazen@urch.eu>"]
description = "Bloom filter implementation using xx hash"
license = "BSD-2"
readme = "README.md"
homepage = "https://github.com/durch/rust-xx-bloomfilter"
repository = "https://github.com/durch/rust-xx-bloomfilter"
keywords = ["bloom", "filter"]

[dependencies]
bit-vec = "^0.6"
rand = "^0.7"
twox-hash = "^1.4"